--- a/views/index.hbs
+++ b/views/index.hbs
@@ -24,8 +24,8 @@
   {{/each}}
     <script src="http://d3js.org/d3.v3.min.js" language="JavaScript"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
-    <script src="js/liquidFillGauge.js" language="JavaScript"></script>
-    <script src="js/index.js" language="JavaScript"></script>
+    <script src="/js/liquidFillGauge.js" language="JavaScript"></script>
+    <script src="/js/index.js" language="JavaScript"></script>
  
 <script>
   // (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
