--- a/views/index.hbs
+++ b/views/index.hbs
@@ -22,7 +22,7 @@
     <span class="updateAt">更新時間：{{updateAt}}</span>
   </div>
   {{/each}}
-    <script src="http://d3js.org/d3.v3.min.js" language="JavaScript"></script>
+    <script src="/js/d3.v3.min.js" language="JavaScript"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
     <script src="/js/liquidFillGauge.js" language="JavaScript"></script>
     <script src="/js/index.js" language="JavaScript"></script>
